add OS X hack because XQuartz clipboard sync stops working https://bugs.freedesktop.org/show_bug.cgi?id=92650